...
          </RegularText>
        )}

        <CheckboxItem
          onChange={this.handleConsentClick}
          style={styling.marginBottomHuge}
          testID="checkbox-consent"
          value={this.state.consentChecked}
        >
          {this.consentLabel}
        </CheckboxItem>

        <View style={styling.marginTopAuto}>
...
            <ErrorText style={styling.marginBottom}>{this.state.errorMessage}</ErrorText>
          ) : null}

          <BrandedButton
            enabled={this.state.consentChecked}
            onPress={this.handleCreatePatient}
            testID="button-create-profile"
          >
            {i18n.t('consent-create-profile')}
          </BrandedButton>
        </View>
      </Screen>
    );
...
