...
          keyboardType="numeric"
          onBlur={formikProps.handleBlur('feet')}
          onChangeText={formikProps.handleChange('feet')}
          onSubmitEditing={() => {}}
          placeholder={i18n.t('placeholder-feet')}
          returnKeyType="next"
          testID="input-height-feet"
          value={formikProps.values.feet}
        />
      </View>
      <View style={styles.inchesField}>
        <ValidatedTextInput
          error={formikProps.touched.inches && !!formikProps.errors.inches}
          keyboardType="numeric"
          onBlur={formikProps.handleBlur('inches')}
          onChangeText={formikProps.handleChange('inches')}
          onSubmitEditing={() => {}}
          placeholder={i18n.t('placeholder-inches')}
          returnKeyType="next"
          testID="input-height-inches"
          value={formikProps.values.inches}
        />
      </View>
    </View>
  );
};
...
