...
                  showError
                  formikProps={formikProps}
                  keyboardType="numeric"
                  label={i18n.t('what-year-were-you-born')}
                  name="yearOfBirth"
                  placeholder={i18n.t('placeholder-year-of-birth')}
                  testID="input-year-of-birth"
                />

                <RadioInput
                  required
                  error={formikProps.touched.sex ? formikProps.errors.sex : ''}
                  items={sexAtBirthItems}
...
                    showError
                    formikProps={formikProps}
                    inputProps={{ autoCompleteType: 'postal-code' }}
                    label={i18n.t('your-postcode')}
                    name="postcode"
                    placeholder={i18n.t('placeholder-postcode')}
                    testID="input-postal-code"
                  />
                ) : null}

                <RadioInput
                  required
                  error={formikProps.touched.everExposed ? formikProps.errors.everExposed : ''}
...
