...
  const patientData = route.params?.patientData;

  return (
    <Screen
      footerOnPress={() => NavigatorService.navigate('LongCovidQuestion', { patientData })}
      footerTitle={i18n.t('long-covid.button')}
      testID="long-covid-start-screen"
    >
      <View style={styles.oneOff}>
        <Text style={styles.oneOffText}>{i18n.t('long-covid.one-off')}</Text>
      </View>
      <HeaderText style={{ ...styles.text, marginTop: sizes.xs }}>{i18n.t('long-covid.title')}</HeaderText>
      <View
...
