...
  return props.footerTitle ? (
    <View style={styles.footerWrapper}>
      <BrandedButton
        enabled={props.footerEnabled}
        loading={props.footerLoading}
        onPress={props.footerOnPress}
        testID="button-footer"
      >
        {props.footerTitle}
      </BrandedButton>
    </View>
  ) : null;
}
...
